gEDA

GNU Electronic Design Automation
------------------------------------------------------------------------------

ChangeLog for gschem

Most recent changes (version wise) are at the top of this file
All the changes are usually noted in this file when they are checked
into the cvs repository.

9/12/99	Added g_funcs_key_name which is used in the list-keys.scm script
	and in the list keys dialog box
	
	Added g_funcs_key_value which is used in the list-keys.scm script	
	and in the list keys dialog box

	Added g_funcs_key_done which is used in the list-keys.scm script	
	and in the list keys dialog box

	Added x_dialog_hotkeys dialog box

	Added above dialog box to the menu

	Modified Stefan's list-key.scm script to fill x_dialog_hotkeys.
	It's pretty crude, but functional

	Unmodified Stefan's list-key.scm script and moved modified functions
	into gschem.scm

	Added hotkeys for Help/About... and Help/Hotkeys...

	Put a tear off bar on the Help menu

	Renamed Shift H (Help) to h (and change Hierarchy to Shift H) in the
	system-gschemrc file

	Adding net= attribute to the attribute selection list dialog box
	(put net in system-gschemrc.in)

9/7/99	Removed all the stupid function pointers I added yesterday 

	Moved huge chunks of x_color.c into libgeda/src/s_color.c

	Cleaned up the code to reflect the above

	Re created embedded_1.sch (using all_1.sch)

	Finished up the color edit dialog box, by doing some rather 
	questionable casting of int's to int *'s.

9/6/99	Finally fixed the very broken color system, now you can allocate
	any color for any object type (bus, net, background, select color)
		- Created x_color.c
		- Removed all global colors from globals.[ch]
		  Except black and white
		- Fixed up x_window.c, gschem.c to call proper init functions
		- Fixed up g_rc.c to call proper x_color functions
		  Also fixed up g_register.c
		- Added logic bubble color keyword / variable / init
		- Fixed up rc file to use the new system (a lot of cleanup)