@@ -1,21 +1,0 @@
-v 19981025
-C 11900 12000 1 0 0 7400-1.sym
-{
-T 12800 13000 5 10 1 1 0
-uref=U100
-}
-C 11900 10200 1 0 0 7411-1.sym
-{
-T 12600 11200 5 10 1 1 0
-uref=U101
-}
-C 15200 10300 1 0 0 74191-1.sym
-{
-T 16500 13000 5 10 1 1 0
-uref=U102
-}
-C 15200 6500 1 0 0 74541-1.sym
-{
-T 16700 9600 5 10 1 1 0
-uref=U103
-}
