@@ -1,11 +1,11 @@
-v 19981025
+v 19990829
 C 29900 21900 1 0 0 pmos-2.sym
 N 30400 19900 30400 19700 4
 C 29900 19900 1 0 0 nmos-2.sym
 N 30600 20300 30700 20300 4
 N 30700 20300 30700 19700 4
 N 30600 22300 30700 22300 4
-C 30800 22500 1 0 0 vdd-1.sym
+C 30800 22900 1 0 0 vdd-1.sym
 C 30900 19400 1 0 0 gnd-1.sym
 C 28700 21200 1 0 0 in-1.sym
 C 30900 21200 1 0 0 out-1.sym
