@@ -1,4 +1,4 @@
-v 19981025
+v 19990829
 C 29900 23000 1 0 0 pmos-2.sym
 C 28500 23000 1 0 0 pmos-2.sym
 N 30400 23800 30400 24000 4
@@ -6,7 +6,7 @@ N 30400 19900 30400 19700 4
 C 29900 19900 1 0 0 nmos-2.sym
 N 30600 20300 30700 20300 4
 N 30600 23400 30700 23400 4
-C 30800 23600 1 0 0 vdd-1.sym
+C 30800 24000 1 0 0 vdd-1.sym
 C 30900 19400 1 0 0 gnd-1.sym
 C 27300 22500 1 0 0 in-1.sym
 C 27300 21700 1 0 0 in-1.sym
