@@ -1,4 +1,4 @@
-v 19981025
+v 19990829
 C 29900 23000 1 0 0 pmos-2.sym
 C 29900 21900 1 0 0 pmos-2.sym
 C 28500 19900 1 0 0 nmos-2.sym
@@ -15,7 +15,7 @@ N 30700 20300 30700 19700 4
 N 30600 22300 30700 22300 4
 N 30700 22300 30700 24000 4
 N 30600 23400 30700 23400 4
-C 30800 23600 1 0 0 vdd-1.sym
+C 30800 24000 1 0 0 vdd-1.sym
 C 30900 19400 1 0 0 gnd-1.sym
 C 27300 22100 1 0 0 in-1.sym
 C 27300 21300 1 0 0 in-1.sym
