@@ -1,4 +1,4 @@
-v 19990529
+v 19990829
 C 31600 26500 1 180 1 opamp-1.sym
 {
 T 32200 25800 5 10 1 1 0
@@ -14,8 +14,7 @@ C 37200 20700 1 270 0 capacitor-1.sym
 C 37800 20700 1 270 0 capacitor-1.sym
 N 33800 20700 33800 20800 4
 N 33800 20800 33300 20800 4
-N 34400 20700 34400 21000 4
-N 34400 21000 34400 21100 4
+N 34400 20700 34400 21100 4
 N 34400 21100 33300 21100 4
 N 33300 21400 35000 21400 4
 N 35000 21400 35000 20700 4
@@ -23,15 +22,14 @@ N 35600 20700 35600 21700 4
 N 35600 21700 33300 21700 4
 N 33300 22000 36200 22000 4
 N 36200 22000 36200 20700 4
-N 36800 20700 36800 22200 4
-N 36800 22200 36800 22300 4
+N 36800 20700 36800 22300 4
 N 36800 22300 33300 22300 4
 N 33300 22600 37400 22600 4
 N 37400 22600 37400 20700 4
 N 38000 20700 38000 22900 4
 N 38000 22900 33300 22900 4
 N 31300 21900 30700 21900 4
-N 31400 26300 31600 26300 4
+N 30400 26300 31600 26300 4
 N 32600 26100 33600 26100 4
 N 33100 26100 33100 27100 4
 N 33100 27100 32600 27100 4
@@ -40,9 +38,8 @@ C 29500 25800 1 0 0 resistor-1.sym
 T 29900 25600 5 10 1 1 0
 value=47K
 }
-N 31400 26300 31200 26300 4
 C 32000 23800 1 0 0 gnd-1.sym
-N 31300 20800 30500 20800 4
+N 30400 20800 31300 20800 4
 C 35800 19200 1 0 0 gnd-1.sym
 N 33800 19800 33800 19600 4
 N 33800 19600 35900 19600 4
@@ -83,7 +80,7 @@ COMMUTATING FILTER PHASE-LOCKED TO MAINS FREQUENCY
 C 22400 19400 1 0 0 4046-1.sym
 N 27100 21300 26900 21300 4
 N 26900 21300 26900 21100 4
-N 24800 21600 26500 21600 4
+N 24400 21600 27100 21600 4
 C 25500 19200 1 270 0 resistor-1.sym
 {
 T 25800 18600 5 10 1 1 0
@@ -94,7 +91,6 @@ C 24900 19200 1 270 0 capacitor-1.sym
 T 24300 18600 5 10 1 1 0
 value=33nF
 }
-N 24800 21600 24400 21600 4
 N 25100 18300 25100 18100 4
 N 25100 18100 24800 18100 4
 N 24800 18100 24800 20400 4
@@ -125,12 +121,11 @@ N 24600 22500 24400 22500 4
 N 22400 21500 22100 21500 4
 C 31300 20600 1 0 0 4051-1.sym
 N 21800 22200 22400 22200 4
-N 22400 22500 21100 22500 4
+N 19500 22500 22400 22500 4
 N 22400 20400 21100 20400 4
-N 21100 20400 21100 19200 4
+N 21100 18100 21100 20400 4
 C 19900 27700 1 0 0 icl7660-1.sym
 C 21000 17800 1 0 0 gnd-1.sym
-N 21100 18100 21100 19200 4
 C 22600 27700 1 270 0 capacitor-2.sym
 {
 T 23200 27200 5 10 1 1 0
@@ -155,18 +150,16 @@ N 23600 30000 24100 30000 4
 N 23600 28900 23600 28700 4
 N 19900 28000 19700 28000 4
 N 19700 28000 19700 26300 4
-N 22000 26400 22000 26300 4
+N 22000 26300 22000 28000 4
 N 22000 26300 19700 26300 4
 N 21900 28000 22000 28000 4
-N 22000 28000 22000 26400 4
 C 23300 27800 1 0 0 diode-1.sym
 C 22600 29400 1 270 0 diode-1.sym
 N 21900 28600 22400 28600 4
-N 22400 28600 22400 28000 4
+N 22400 26600 22400 28600 4
 N 23300 28000 22800 28000 4
 N 22800 28000 22800 28500 4
 N 22800 29400 22800 30000 4
-N 22400 28000 22400 26600 4
 N 22400 26600 22800 26600 4
 N 22800 26600 22800 26800 4
 N 22800 27700 22800 28000 4
@@ -190,13 +183,12 @@ T 30800 25200 5 10 1 1 270
 value=100K
 }
 N 31100 24500 31100 24300 4
-C 31300 28800 1 180 0 vdd-1.sym
+C 27700 27100 1 0 0 vdd-1.sym
 T 25300 25800 9 10 1 0 0
 unfiltered Vin
 T 33700 26200 9 10 1 0 0
 comb-filtered Vout
 C 30300 20100 1 0 0 gnd-1.sym
-N 30500 20800 30400 20800 4
 N 30400 20800 30400 20400 4
 T 32000 30100 9 10 1 0 0
 This op-amp may want to be dc isolated from the input which currently
@@ -214,7 +206,7 @@ T 32000 29400 9 10 1 0 0
 Good long term design takes care of these voltage shifts in one hit
 C 27100 19600 1 0 0 4040-1.sym
 N 29400 22300 29400 23800 4
-N 28800 23800 21800 23800 4
+N 21800 23800 29400 23800 4
 T 24500 21700 9 10 1 0 0
 Fc = 16*50 = 800 Hz
 T 20400 25100 9 10 1 0 0
@@ -236,8 +228,7 @@ C 31700 26900 1 0 0 capacitor-1.sym
 T 32000 27400 5 10 1 1 0
 33nF
 }
-N 30700 22200 30700 25600 4
-N 31200 26300 30400 26300 4
+N 30700 21900 30700 25900 4
 N 31700 27100 30700 27100 4
 N 30700 27100 30700 26300 4
 C 29500 26200 1 0 0 resistor-1.sym
@@ -245,12 +236,10 @@ C 29500 26200 1 0 0 resistor-1.sym
 T 29900 26500 5 10 1 1 0
 value=47K
 }
-N 30700 25600 30700 25900 4
 N 30700 25900 31600 25900 4
 N 31100 25400 31100 25900 4
 N 30400 25900 30700 25900 4
 N 31100 27300 31100 25900 4
-N 30700 22200 30700 21900 4
 T 29800 22900 9 10 1 0 0
 200Hz
 T 29800 22600 9 10 1 0 0
@@ -277,7 +266,6 @@ T 18700 21200 5 10 1 1 0
 }
 N 19300 22100 19500 22100 4
 N 19500 22000 19500 22500 4
-N 19500 22500 21100 22500 4
 N 20700 22000 21000 22000 4
 N 21000 22000 21000 23600 4
 N 19300 21500 19500 21500 4
@@ -290,8 +278,6 @@ C 26300 19200 1 270 0 resistor-1.sym
 T 26600 18600 5 10 1 1 0
 value=100K
 }
-N 28800 23800 29400 23800 4
-N 26500 21600 27100 21600 4
 N 24400 21300 26400 21300 4
 N 26400 21300 26400 19200 4
 N 26400 18300 26400 18100 4
@@ -314,7 +300,7 @@ N 26700 27000 29100 27000 4
 N 29100 27000 29100 26300 4
 N 29100 26300 29500 26300 4
 N 26700 25700 25900 25700 4
-C 28100 27500 1 180 0 vdd-1.sym
+C 30900 28400 1 0 0 vdd-1.sym
 C 27800 24900 1 0 0 gnd-1.sym
 N 27900 25200 27900 25500 4
 N 27900 26300 27900 27100 4
