@@ -1,4 +1,4 @@
-v 19990610
+v 19990829
 C 21600 31000 1 0 0 7400-1.sym
 C 21600 29700 1 0 0 7400-1.sym
 N 21600 30400 21300 30400 4
@@ -216,8 +216,8 @@ DIV_2_H
 }
 N 33000 21500 33000 21400 4
 N 33000 23800 33000 23700 4
-C 32800 21000 1 0 0 vdd-1.sym
-C 33200 24200 1 180 0 vdd-1.sym
+C 33200 21400 1 180 0 vdd-1.sym
+C 32800 23800 1 0 0 vdd-1.sym
 T 32200 19900 9 14 1 0 0
 DIVIDE BY 2
 C 32000 23100 1 0 0 decon-1.sym
